intricate styling of work example cards

--- a/index.html
+++ b/index.html
@@ -71,66 +71,78 @@
     <div class="jumbotron work">
         <div class="container">
             <div class="col-xs-hidden col-sm-4">
-                <div class="card" style="width: 18rem;">
+                <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">Site Name</h5>
                         <h6 class="card-subtitle mb-2 text-muted">Highlight Technologies</h6>
                         <p class="card-text">Brief Overview of what the site or app does.</p>
-                        <a href="#" class="card-link"><i class="fas fa-desktop"></i></a>
-                        <a href="#" class="card-link"><i class="fab fa-github"></i></a>
+                        <div class="row" style='text-align: center; padding-top: 10px;'>
+                            <a href="#" class="card-link"><i class="fas fa-desktop" id='desktop-icon'></i></a>
+                            <a href="#" class="card-link"><i class="fab fa-github" id='github-icon'></i></a>
+                        </div>
+                    </div>
+                </div>
+                <br>
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">Site Name</h5>
+                        <h6 class="card-subtitle mb-2 text-muted">Highlight Technologies</h6>
+                        <p class="card-text">Brief Overview of what the site or app does.</p>
+                        <div class="row" style='text-align: center; padding-top: 10px;'>
+                            <a href="#" class="card-link"><i class="fas fa-desktop" id='desktop-icon'></i></a>
+                            <a href="#" class="card-link"><i class="fab fa-github" id='github-icon'></i></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xs-hidden col-sm-4">
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">Site Name</h5>
+                        <h6 class="card-subtitle mb-2 text-muted">Highlight Technologies</h6>
+                        <p class="card-text">Brief Overview of what the site or app does.</p>
+                        <div class="row" style='text-align: center; padding-top: 10px;'>
+                            <a href="#" class="card-link"><i class="fas fa-desktop" id='desktop-icon'></i></a>
+                            <a href="#" class="card-link"><i class="fab fa-github" id='github-icon'></i></a>
+                        </div>
+                    </div>
+                </div>
+                <br>
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">Site Name</h5>
+                        <h6 class="card-subtitle mb-2 text-muted">Highlight Technologies</h6>
+                        <p class="card-text">Brief Overview of what the site or app does.</p>
+                        <div class="row" style='text-align: center; padding-top: 10px;'>
+                            <a href="#" class="card-link"><i class="fas fa-desktop" id='desktop-icon'></i></a>
+                            <a href="#" class="card-link"><i class="fab fa-github" id='github-icon'></i></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xs-hidden col-sm-4">
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">Site Name</h5>
+                        <h6 class="card-subtitle mb-2 text-muted">Highlight Technologies</h6>
+                        <p class="card-text">Brief Overview of what the site or app does.</p>
 
+                        <div class="row" style='text-align: center; padding-top: 10px;'>
+                            <a href="#" class="card-link"><i class="fas fa-desktop" id='desktop-icon'></i></a>
+                            <a href="#" class="card-link"><i class="fab fa-github" id='github-icon'></i></a>
+                        </div>
                     </div>
                 </div>
                 <br>
-                <div class="card" style="width: 18rem;">
+                <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">Site Name</h5>
                         <h6 class="card-subtitle mb-2 text-muted">Highlight Technologies</h6>
                         <p class="card-text">Brief Overview of what the site or app does.</p>
-                        <a href="#" class="card-link"><i class="fas fa-desktop"></i></a>
-                        <a href="#" class="card-link"><i class="fab fa-github"></i></a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-xs-hidden col-sm-4">
-                <div class="card" style="width: 18rem;">
-                    <div class="card-body">
-                        <h5 class="card-title">Site Name</h5>
-                        <h6 class="card-subtitle mb-2 text-muted">Highlight Technologies</h6>
-                        <p class="card-text">Brief Overview of what the site or app does.</p>
-                        <a href="#" class="card-link"><i class="fas fa-desktop"></i></a>
-                        <a href="#" class="card-link"><i class="fab fa-github"></i></a>
-                    </div>
-                </div>
-                <br>
-                <div class="card" style="width: 18rem;">
-                    <div class="card-body">
-                        <h5 class="card-title">Site Name</h5>
-                        <h6 class="card-subtitle mb-2 text-muted">Highlight Technologies</h6>
-                        <p class="card-text">Brief Overview of what the site or app does.</p>
-                        <a href="#" class="card-link"><i class="fas fa-desktop"></i></a>
-                        <a href="#" class="card-link"><i class="fab fa-github"></i></a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-xs-hidden col-sm-4">
-                <div class="card" style="width: 18rem;">
-                    <div class="card-body">
-                        <h5 class="card-title">Site Name</h5>
-                        <h6 class="card-subtitle mb-2 text-muted">Highlight Technologies</h6>
-                        <p class="card-text">Brief Overview of what the site or app does.</p>
-                        <a href="#" class="card-link"><i class="fas fa-desktop"></i></a>
-                        <a href="#" class="card-link"><i class="fab fa-github"></i></a>
-                    </div>
-                </div>
-                <br>
-                <div class="card" style="width: 18rem;">
-                    <div class="card-body">
-                        <h5 class="card-title">Site Name</h5>
-                        <h6 class="card-subtitle mb-2 text-muted">Highlight Technologies</h6>
-                        <p class="card-text">Brief Overview of what the site or app does.</p>
-                        <a href="#" class="card-link"><i class="fas fa-desktop"></i></a>
-                        <a href="#" class="card-link"><i class="fab fa-github"></i></a>
+                        <div class="row" style='text-align: center; padding-top: 10px;'>
+                            <a href="#" class="card-link"><i class="fas fa-desktop" id='desktop-icon'></i></a>
+                            <a href="#" class="card-link"><i class="fab fa-github" id='github-icon'></i></a>
+                        </div>
                     </div>
                 </div>
             </div>
