navbar fix for continuous collapse and styling

--- a/index.html
+++ b/index.html
@@ -19,9 +19,12 @@
     <!------------TOP JUMBOTRON/NAVBAR------------>
     <div class="jumbotron">
         <nav class="navbar navbar-masthead navbar-default navbar-fixed-top">
-            <div class="container">
+            <div class="container" style="text-align: right;
+    margin-right: 1%;
+    margin-top: 1%;">
                 <div class="navbar-header">
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                    <a href="#" class = 'language'>F R</a>
+                    <button type="button" class="navbar-toggle collapsed btn-lg" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
