project card content and link updates

--- a/index.html
+++ b/index.html
@@ -78,11 +78,11 @@
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">Timing Assistant</h5>
-                        <h6 class="card-subtitle mb-2 text-muted">Flask, JavaScript, NoSQL</h6>
+                        <h6 class="card-subtitle mb-2 text-muted">Flask, JavaScript, MongoDB</h6>
                         <p id="card-text">A stopwatch to time multiple athletes simultaneously in swimming and track.</p>
                         <div class="row" style='text-align: center; padding-top: 10px;'>
-                            <a href="https://timing-assistant.herokuapp.com/" class="card-link"><i class="fas fa-desktop" id='desktop-icon'></i></a>
-                            <a href="https://github.com/hschafer2017/Sports-Multi-timer-Assistant" class="card-link"><i class="fab fa-github" id='github-icon'></i></a>
+                            <a href="https://timing-assistant.herokuapp.com/" class="card-link" target="_blank"><i class="fas fa-desktop" id='desktop-icon'></i></a>
+                            <a href="https://github.com/hschafer2017/Sports-Multi-timer-Assistant" class="card-link" target="_blank"><i class="fab fa-github" id='github-icon'></i></a>
                         </div>
                     </div>
                 </div>
@@ -90,12 +90,12 @@
             <div class="col-xs-6 col-sm-4 project-cards">
                 <div class="card">
                     <div class="card-body">
-                        <h5 class="card-title">Site Name</h5>
-                        <h6 class="card-subtitle mb-2 text-muted">Highlight Technologies</h6>
-                        <p id="card-text">Brief Overview of what the site or app does.</p>
+                        <h5 class="card-title">PC Swimming</h5>
+                        <h6 class="card-subtitle mb-2 text-muted">Django, AWS, Travis-CI </h6>
+                        <p id="card-text">An e-commerce site for PC Swimming and Diving for swimmers and alumni.</p>
                         <div class="row" style='text-align: center; padding-top: 10px;'>
-                            <a href="#" class="card-link"><i class="fas fa-desktop" id='desktop-icon'></i></a>
-                            <a href="#" class="card-link"><i class="fab fa-github" id='github-icon'></i></a>
+                            <a href="https://www.https://pcswimming-project.herokuapp.com/" class="card-link" target="_blank"><i class="fas fa-desktop" id='desktop-icon'></i></a>
+                            <a href="https://github.com/hschafer2017/PCSwimming" class="card-link" target="_blank"><i class="fab fa-github" id='github-icon'></i></a>
                         </div>
                     </div>
                 </div>
@@ -103,12 +103,12 @@
             <div class="col-xs-6 col-sm-4 project-cards">
                 <div class="card">
                     <div id="card-text">
-                        <h5 class="card-title">Site Name</h5>
-                        <h6 class="card-subtitle mb-2 text-muted">Highlight Technologies</h6>
-                        <p class="card-text">Brief Overview of what the site or app does.</p>
+                        <h5 class="card-title">Give A GIF</h5>
+                        <h6 class="card-subtitle mb-2 text-muted">RESTful API, Flask, JavaScript</h6>
+                        <p id="card-text">A random GIF generator using an API and a backend.</p>
                         <div class="row" style='text-align: center; padding-top: 10px;'>
-                            <a href="#" class="card-link"><i class="fas fa-desktop" id='desktop-icon'></i></a>
-                            <a href="#" class="card-link"><i class="fab fa-github" id='github-icon'></i></a>
+                            <a href="#" class="card-link" target="_blank"><i class="fas fa-desktop" id='desktop-icon'></i></a>
+                            <a href="https://github.com/hschafer2017/Give-A-GIF" class="card-link" target="_blank"><i class="fab fa-github" id='github-icon'></i></a>
                         </div>
                     </div>
                 </div>
@@ -116,12 +116,12 @@
             <div class="col-xs-6 col-sm-4 project-cards">
                 <div class="card">
                     <div id="card-text">
-                        <h5 class="card-title">Site Name</h5>
-                        <h6 class="card-subtitle mb-2 text-muted">Highlight Technologies</h6>
-                        <p class="card-text">Brief Overview of what the site or app does.</p>
+                        <h5 class="card-title">Bop It! Game</h5>
+                        <h6 class="card-subtitle mb-2 text-muted">JavaScript, jQuery, HTML, CSS</h6>
+                        <p id="card-text">Inspired by the children's game, optimised for desktop and mobile.</p>
                         <div class="row" style='text-align: center; padding-top: 10px;'>
-                            <a href="#" class="card-link"><i class="fas fa-desktop" id='desktop-icon'></i></a>
-                            <a href="#" class="card-link"><i class="fab fa-github" id='github-icon'></i></a>
+                            <a href="https://hschafer2017.github.io/Stream-Two-Project/" class="card-link" target="_blank"><i class="fas fa-desktop" id='desktop-icon'></i></a>
+                            <a href="https://github.com/hschafer2017/Stream-Two-Project" class="card-link" target="_blank"><i class="fab fa-github" id='github-icon'></i></a>
                         </div>
                     </div>
                 </div>
@@ -129,12 +129,12 @@
             <div class="col-xs-6 col-sm-4 project-cards">
                 <div class="card">
                     <div class="card-body">
-                        <h5 class="card-title">Site Name</h5>
-                        <h6 class="card-subtitle mb-2 text-muted">Highlight Technologies</h6>
-                        <p id="card-text">Brief Overview of what the site or app does.</p>
+                        <h5 class="card-title">Portfolio Site</h5>
+                        <h6 class="card-subtitle mb-2 text-muted">HTML, CSS, Bootstrap</h6>
+                        <p id="card-text">A static website to showcase developer projects for prospective employers.</p>
                         <div class="row" style='text-align: center; padding-top: 10px;'>
-                            <a href="#" class="card-link"><i class="fas fa-desktop" id='desktop-icon'></i></a>
-                            <a href="#" class="card-link"><i class="fab fa-github" id='github-icon'></i></a>
+                            <a href="#" class="card-link" target="_blank"><i class="fas fa-desktop" id='desktop-icon'></i></a>
+                            <a href="https://github.com/hschafer2017/HSCHAFER-Portfolio" class="card-link" target="_blank"><i class="fab fa-github" id='github-icon'></i></a>
                         </div>
                     </div>
                 </div>
@@ -142,12 +142,12 @@
             <div class="col-xs-6 col-sm-4 project-cards">
                 <div class="card">
                     <div class="card-body">
-                        <h5 class="card-title">Site Name</h5>
-                        <h6 class="card-subtitle mb-2 text-muted">Highlight Technologies</h6>
-                        <p id="card-text">Brief Overview of what the site or app does.</p>
+                        <h5 class="card-title">World Wide Weather</h5>
+                        <h6 class="card-subtitle mb-2 text-muted">JavaScript, API, HTML, CSS</h6>
+                        <p id="card-text">Using an API, search for the current weather data for a location.</p>
                         <div class="row" style='text-align: center; padding-top: 10px;'>
-                            <a href="#" class="card-link"><i class="fas fa-desktop" id='desktop-icon'></i></a>
-                            <a href="#" class="card-link"><i class="fab fa-github" id='github-icon'></i></a>
+                            <a href="#" class="card-link" target="_blank"><i class="fas fa-desktop" id='desktop-icon'></i></a>
+                            <a href="https://github.com/hschafer2017/Weather-Search-API" class="card-link" target="_blank"><i class="fab fa-github" id='github-icon'></i></a>
                         </div>
                     </div>
                 </div>
@@ -222,10 +222,10 @@
         <div class="container">
             <div class="row foot">
                 <div class="col-xs-12 col-sm-12 icons">
-                    <a href="https://www.linkedin.com/in/haleyschafer"><i class="fab fa-linkedin-in"></i></a>
-                    <a href="https://www.github.com/hschafer2017"><i class="fab fa-github"></i></a>
+                    <a href="https://www.linkedin.com/in/haleyschafer" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                    <a href="https://www.github.com/hschafer2017" target="_blank"><i class="fab fa-github"></i></a>
                     <a href="SCHAFER_JuniorDevCV.pdf" download><i class="fas fa-file-download"></i></a>
-                    <a href="#" style='padding-right: 0px'><i class="fab fa-medium-m"></i></a>
+                    <a href="https://medium.com/@haleyschafer" style='padding-right: 0px' target="_blank"><i class="fab fa-medium-m"></i></a>
                 </div>
             </div>
         </div>
