about section content, font choice,and other minor styling changes

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script type="text/javascript" src="./libraries/jquery.min.js"></script>
     <script type="text/javascript" src="./libraries/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css" integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Nobile" rel="stylesheet">
     <link rel="stylesheet" href="style.css" type="text/css" />
     <title>Haley Schafer Portfolio</title>
 </head>
@@ -44,22 +45,25 @@
             </div>
         </nav>
         <div class="container">
+            <br>
             <h1 class='name'>Haley Schafer</h1>
+            <p>Full-Stack Software Developer</p>  
+           
         </div>
     </div>
 
     <!---------ABOUT ME---------->
-    <div class="container">
-        <div class="row about-row">
+    <div class="container about-row">
+        <div class="row">
             <br>
             <br>
-            <h2>About Me</h2>
+            <h2>A B O U T</h2>
             <br>
             <div class="col-xs-hidden col-sm-4">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus ipsum laborum ex cum mollitia esse cupiditate? Laboriosam aliquam at saepe quaerat harum distinctio voluptate, corrupti optio animi, pariatur laborum repudiandae.</p>
+                <p>I am experienced in sales and tech industry-focused client management. Transitioning into software development, I am a recent graduate of Code Institute working with front-end and back-end frameworks. </p>
             </div>
             <div class="col-xs-hidden col-sm-4">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur magni error repellat, omnis rerum delectus tempore distinctio neque alias! Ipsam modi porro, praesentium maiores atque, a voluptatibus excepturi itaque sunt.</p>
+                <p>I specialise in HTML, CSS, JavaScript, and Python languages, using Django and Flask frameworks. Passionate about creating a positive user experience, I enjoy working with and adapting to technologies as they develop. </p>
             </div>
             <div class="col-xs-hidden col-sm-4">
 
