--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                     <ul class="nav navbar-nav navbar-right">
                         <li><a class='page-scroll' href="#about">A B O U T</a></li>
                         <li><a class='page-scroll' href="#work">W O R K</a></li>
+                        <li><a class='page-scroll' href="#skills">S K I L L S</a></li>
                         <li><a class='page-scroll' href="#contact">C O N T A C T</a></li>
                     </ul>
 
@@ -73,7 +74,7 @@
     </div>
 
     <!--------------WORK------------->
-    <div class="jumbotron work" >
+    <div class="jumbotron work">
         <div class="container" id='work'>
             <div class="col-xs-6 col-sm-4 project-cards">
                 <div class="card">
@@ -118,7 +119,7 @@
                 <div class="card">
                     <div id="card-text">
                         <h5 class="card-title">Bop It! Game</h5>
-                        <h6 class="card-subtitle mb-2 text-muted">JavaScript, jQuery, HTML, CSS</h6>
+                        <h6 class="card-subtitle mb-2 text-muted">JavaScript, jQuery, HTML</h6>
                         <p id="card-text">Inspired by the children's game, optimised for desktop and mobile.</p>
                         <div class="row" style='text-align: center; padding-top: 10px;'>
                             <a href="https://hschafer2017.github.io/Stream-Two-Project/" class="card-link" target="_blank"><i class="fas fa-desktop" id='desktop-icon'></i></a>
@@ -158,19 +159,26 @@
 
     <!------------SECTION------------>
     <div class="container">
-        <div class="row about-row">
+        <div class="row about-row" id='skills'>
             <br>
             <br>
-            <h2>Other Stuff</h2>
-            <br>
-            <div class="col-xs-hidden col-sm-4">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus ipsum laborum ex cum mollitia esse cupiditate? Laboriosam aliquam at saepe quaerat harum distinctio voluptate, corrupti optio animi, pariatur laborum repudiandae.</p>
+            <h2>S K I L L S</h2>
+            <div class="col-xs-6 col-sm-4">
+                <div class="arc-container">
+                    <div class="arc-overlay">
+                        <p>HTML</p>
+                    </div>
+                    <div class="arc-wrapper">
+                        <div class="arc2"></div>
+                        <div class="arc1"></div>
+                    </div>
+                </div>
             </div>
-            <div class="col-xs-hidden col-sm-4">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur magni error repellat, omnis rerum delectus tempore distinctio neque alias! Ipsam modi porro, praesentium maiores atque, a voluptatibus excepturi itaque sunt.</p>
-            </div>
-            <div class="col-xs-hidden col-sm-4">
 
+            <div class="col-xs-hidden col-sm-4">
+            </div>
+            <div class="col-xs-hidden col-sm-4 skill-icon">
+                <a href="SCHAFER_JuniorDevCV.pdf" download><i class="fas fa-file-download" id='skill-icon'></i></a>
             </div>
             <br>
             <br>
@@ -233,8 +241,8 @@
     </footer>
     <script type="text/javascript" src="./libraries/jquery.min.js"></script>
     <script type="text/javascript" src="./libraries/bootstrap.min.js"></script>
-    <script type="text/javascript" src="jquery.easing.min.js"></script>
-    <script type="text/javascript" src="creative.js"></script>
+    <!--<script type="text/javascript" src="jquery.easing.min.js"></script>-->
+    <!--<script type="text/javascript" src="creative.js"></script>-->
 </body>
 
 </html>
