skills circles with content and further styling

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                         <li><a class='page-scroll' href="#work">W O R K</a></li>
                         <li><a class='page-scroll' href="#skills">S K I L L S</a></li>
                         <li><a class='page-scroll' href="#contact">C O N T A C T</a></li>
+                        <li><a href="SCHAFER_JuniorDevCV.pdf" download>C V</a></li>
                     </ul>
 
                 </div>
@@ -157,16 +158,30 @@
         </div>
     </div>
 
-    <!------------SECTION------------>
-    <div class="container">
-        <div class="row about-row" id='skills'>
+    <!------------SKILLS------------>
+    <div class="container skills">
+        <div class="row skills-row" id='skills'>
             <br>
             <br>
             <h2>S K I L L S</h2>
-            <div class="col-xs-6 col-sm-4">
+        </div>
+        <div class="container">
+            <div class="col-xs-6 col-sm-4 skill-circle">
                 <div class="arc-container">
                     <div class="arc-overlay">
-                        <p>HTML</p>
+                        <p class='html'>.html</p>
+                    </div>
+                    <div class="arc-wrapper">
+                        <div class="arc2"></div>
+                        <div class="arc1"></div>
+                    </div>
+
+                </div>
+            </div>
+            <div class="col-xs-6 col-sm-4 skill-circle">
+                <div class="arc-container">
+                    <div class="arc-overlay">
+                        <p class='css'>.css</p>
                     </div>
                     <div class="arc-wrapper">
                         <div class="arc2"></div>
@@ -174,19 +189,57 @@
                     </div>
                 </div>
             </div>
+            <div class="col-xs-6 col-sm-4 skill-circle">
+                <div class="arc-container">
+                    <div class="arc-overlay">
+                        <p class='js'>.js</p>
+                    </div>
+                    <div class="arc-wrapper">
+                        <div class="arc2"></div>
+                        <div class="arc1"></div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xs-6 col-sm-4 skill-circle">
+                <div class="arc-container">
+                    <div class="arc-overlay">
+                        <p class='py'>.py</p>
+                    </div>
+                    <div class="arc-wrapper">
+                        <div class="arc2"></div>
+                        <div class="arc1"></div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xs-6 col-sm-4 skill-circle">
+                <div class="arc-container">
+                    <div class="arc-overlay">
+                        <p class='sql'>SQL</p>
+                    </div>
+                    <div class="arc-wrapper">
+                        <div class="arc2"></div>
+                        <div class="arc1"></div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xs-6 col-sm-4 skill-circle">
+                <div class="arc-container">
+                    <div class="arc-overlay">
+                        <p class='django'>Django</p>
+                    </div>
+                    <div class="arc-wrapper">
+                        <div class="arc2"></div>
+                        <div class="arc1"></div>
+                    </div>
+                </div>
+            </div>
+            <br>
+            <br>
 
-            <div class="col-xs-hidden col-sm-4">
-            </div>
-            <div class="col-xs-hidden col-sm-4 skill-icon">
-                <a href="SCHAFER_JuniorDevCV.pdf" download><i class="fas fa-file-download" id='skill-icon'></i></a>
-            </div>
             <br>
             <br>
         </div>
-        <br>
-        <br>
     </div>
-
     <!---------CONTACT--------->
     <div class="jumbotron contact">
         <div class="container" id='contact'>
