--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     margin-top: 1%;">
                 <div class="navbar-header">
                     <a href="#" class='language'>F R</a>
-                    <button type="button" class="navbar-toggle collapsed " data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                    <button id = 'scroll-button' type="button" class="navbar-toggle collapsed " data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
@@ -294,8 +294,7 @@
     </footer>
     <script type="text/javascript" src="./libraries/jquery.min.js"></script>
     <script type="text/javascript" src="./libraries/bootstrap.min.js"></script>
-    <!--<script type="text/javascript" src="jquery.easing.min.js"></script>-->
-    <!--<script type="text/javascript" src="creative.js"></script>-->
+    <script type="text/javascript" src="index.js"></script>
 </body>
 
 </html>
